Refactored main loop
Made input modes a stack, added syntax highlighting hints
added interactive response selection

--- a/nlcc/prompts/sh-prompts.yml
+++ b/nlcc/prompts/sh-prompts.yml
@@ -6,9 +6,11 @@ gromacs:
     comment: '#'
     stop:
       - "\n"
+    language: bash
 bash:
   text: |
       #!/bin/bash
   comment: '#'
   stop:
     - "\n"
+  language: bash
