Added eval script

--- a/nlcc/prompts/py-prompts.yml
+++ b/nlcc/prompts/py-prompts.yml
@@ -5,3 +5,19 @@ numpy:
     comment: '#'
     multiline_comment: '"""'
     language: python
+    stop:
+        - def
+        - '"""'
+        - '#'
+python:
+    text: |
+        import math
+        import sys
+
+    comment: '#'
+    multiline_comment: '"""'
+    language: python
+    stop:
+        - def
+        - '"""'
+        - '#'
