--- a/nlcc/prompts/md-prompts.yml
+++ b/nlcc/prompts/md-prompts.yml
@@ -4,3 +4,7 @@ mdtraj:
     comment: '#'
     multiline_comment: '"""'
     language: python
+    stop:
+        - def
+        - '"""'
+        - '#'
