--- a/nlcc/prompts/md-prompts.yml
+++ b/nlcc/prompts/md-prompts.yml
@@ -4,3 +4,9 @@ mdtraj:
     comment: '#'
     multiline_comment: '"""'
     language: python
+MDAnalysis:
+    text: |
+        import MDAnalysis
+    comment: '#'
+    multiline_comment: '"""'
+    language: python
