--- a/nlcc/prompts/md-prompts.yml
+++ b/nlcc/prompts/md-prompts.yml
@@ -15,6 +15,7 @@ mdtraj:
 MDAnalysis:
     text: |
         import MDAnalysis
+        import numpy as np
 
         """
         Print version string
@@ -31,6 +32,7 @@ MDAnalysis:
 mdtraj-insert:
     text: |
         import mdtraj as md
+        import numpy as np
 
     comment: '#'
     multiline_comment: '"""'
@@ -40,6 +42,7 @@ mdtraj-insert:
 MDAnalysis-insert:
     text: |
         import MDAnalysis
+        import numpy as np
 
     comment: '#'
     multiline_comment: '"""'
